common.css
body {
	background: rgba(230, 230, 230, 1.0);
}

.header	 {
	max-width: 60em;
	float: center;
	margin: 0 auto;
}

.home	{
	list-style-type: none;
	float: left;
	display: inline;
	margin: 0 auto;
}

.home a	{
	transition: all .1s ease-in;
	-moz-transition: all .1s ease-in;
    -o-transition: all .1s ease-in;
    -webkit-transition: all .1s ease-in;
	font-family: 'Source Code Pro', monospace;
	text-decoration: none;
	background: rgba(230, 230, 230, 1.0);
	color: #242424;
}

.home a:hover	{
	background: rgba(36, 36, 36, 1.0);
	color: #ffffff;
}

.nav0	{
	list-style-type: none;
	display: inline;
	float: right;
	margin: 0 auto;
}

.nav0 a	{
	transition: all .1s ease-in;
	-moz-transition: all .1s ease-in;
    -o-transition: all .1s ease-in;
    -webkit-transition: all .1s ease-in;
	font-family: 'Source Code Pro', monospace;
	text-decoration: none;
	background: rgba(230, 230, 230, 1.0);
	color: #242424;
}

.nav0 a:hover	{
	background: rgba(36, 36, 36, 1.0);
	color: #ffffff;
}

.nav_item	{
	display: inline;
	margin: 0.5em;
}

@media screen and (max-width: 600px)	 {
	.nav0	{
		float: left;
		display: block;
		margin: 0 auto;
	}
	
	.nav_item	{
		display: block;
		margin: 0 auto;
	}
}

.headline	{
	font-family: 'Source Code Pro', monospace;
	color: #242424;
}

.bodytext	{
	font-family: 'Source Code Pro', monospace;
	color: #242424;
}

#post0 {
	text-align: center;
}

.footer	{
	left: 0;
	bottom: 0;
	width: 100%;
	background: rgba(36, 36, 36, 1.0);
}

.info	{
	font-family: 'Source Code Pro', monospace;
	color: #ffffff;
	text-align: center;
}

